cmake_minimum_required(VERSION 3.8)
project(LeetCode)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        _1.cpp
        _10.cpp
        _11.cpp
        _12.cpp
        _14.cpp
        _15.cpp
        _16.cpp
        _17.cpp
        _18.cpp
        _19.cpp
        _20.cpp
        _21.cpp
        _22.cpp
        _23.cpp
        _24.cpp
        _25.cpp
        _26.cpp
        _27.cpp
        _30.cpp
        _31.cpp
        _33.cpp
        _33_2.cpp
        _35.cpp
        _36.cpp
        _37.cpp
        _38.cpp
        _39.cpp
        _40.cpp
        _41.cpp
        _42.cpp
        _43.cpp
        _44.cpp
        _45.cpp
        _46.cpp
        _47.cpp
        _48.cpp
        _49.cpp
        _5.cpp
        _50.cpp
        _51.cpp
        _9.cpp
        DeleteSubstring.cpp
        ListNode.cpp
        main.cpp
        MinMove.cpp
        PalindromeCounter.cpp
        SubArraySum.cpp
        Substring.cpp
        TwinString.cpp)

add_executable(LeetCode ${SOURCE_FILES})